Added environment variables, removed sensitive config, added gitignore